# food-autoservice

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/versions/: 4fba9f51e61b_create_main_tables.py
k8s/: api.yaml  database.yaml
k8s/api/: api.yaml  autoscale.yaml  configmap.yaml
k8s/postgres/: configmap.yaml  deployment.yaml  service.yaml
src/: main.py  settings.py
src/adapters/: customer_adapter.py  items_adapter.py  order_adapter.py
src/adapters/db/: schema.py
src/domain/customer/: service.py
src/domain/items/: service.py
src/domain/order/: service.py
src/domain/ports/: customer.py  items.py  order.py
src/entrypoints/api/: main.py  router.py
src/entrypoints/api/customer/: router.py
src/entrypoints/api/items/: router.py
src/entrypoints/api/order/: router.py
