[tool.poetry]
name = "food-autoservice"
version = "0.1.0"
description = ""
authors = ["Gabriel Lotti <gabriel.lotti@sensedata.com.br>"]
readme = "README.md"
packages = [{include = "food_autoservice", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
