[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Gabriel Lotti <gslotti.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pydantic = "^2.8.2"
uvicorn = "^0.30.5"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.4.0"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
